@@ -2,4 +2,6 @@ This file is intended to be a scratch pad storing
 design, implementation notes, questions and answers, short
 term TODO lists etc. Feel free to put anything here.
 
-
+Q:if the widget interface.main_window is destroyed, will it be NULL?
+several combinations of loading/ unloading gerberfiles and destroying the search
+dialog hint at it still exists and checking with if (interface.main_window) is not enough
