@@ -219,96 +219,6 @@ void create_marked_layer(int idx) {
 	switch(shape) {
 	case PART_SHAPE_RECTANGLE:
 	    // TODO: draw rectangle length x width taking into account rotation or pad x,y
-#if 0
-            curr_net->start_x = mid_x;
-            curr_net->start_y = mid_y;
-            curr_net->stop_x = pad_x;
-            curr_net->stop_y = pad_y;
-    
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = LINEARx1;
-        
-            curr_net->next = (gerb_net_t *)malloc(sizeof(gerb_net_t));
-            curr_net = curr_net->next;
-            assert(curr_net);
-            memset((void *)curr_net, 0, sizeof(gerb_net_t));
-
-
-            curr_net->start_x = pad_x;
-            curr_net->start_y = pad_y;
-            curr_net->stop_x = pad_x + width;
-            curr_net->stop_y = pad_y +length;
-    
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = PAREA_START;
-            
-            curr_net->next = (gerb_net_t *)malloc(sizeof(gerb_net_t));
-            curr_net = curr_net->next;
-            assert(curr_net);
-            memset((void *)curr_net, 0, sizeof(gerb_net_t));
-  
-            curr_net->start_x = pad_x + 2 * (mid_x - pad_x);
-            curr_net->start_y = pad_y;
-            curr_net->stop_x = pad_x + width;
-            curr_net->stop_y = pad_y + length;
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = PAREA_START;
-
-            curr_net->next = (gerb_net_t *)malloc(sizeof(gerb_net_t));
-            curr_net = curr_net->next;
-            assert(curr_net);
-            memset((void *)curr_net, 0, sizeof(gerb_net_t));
-            curr_net->start_x = pad_x + width;
-            curr_net->start_y = pad_y + length;
-            curr_net->stop_x = pad_x;
-            curr_net->stop_y = pad_y + length;
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = PAREA_START;            
-            
-            curr_net->next = (gerb_net_t *)malloc(sizeof(gerb_net_t));
-            curr_net = curr_net->next;
-            assert(curr_net);
-            memset((void *)curr_net, 0, sizeof(gerb_net_t));
-            
-            curr_net->start_x = pad_x;
-            curr_net->start_y = pad_y + length;
-            curr_net->stop_x = pad_x;
-            curr_net->stop_y = pad_y +length;
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = PAREA_START;
-            
-            curr_net->next = (gerb_net_t *)malloc(sizeof(gerb_net_t));
-            curr_net = curr_net->next;
-            assert(curr_net);
-            memset((void *)curr_net, 0, sizeof(gerb_net_t));
-  
-            curr_net->start_x = pad_x + 10 * width;
-            curr_net->start_y = pad_y + 10 * length;
-            curr_net->stop_x = pad_x;
-            curr_net->stop_y = pad_y;
-            curr_net->aperture = 0;
-            curr_net->layer_polarity = POSITIVE;
-            curr_net->unit = MM;
-            curr_net->aperture_state = ON;
-            curr_net->interpolation = PAREA_END;
-            printf("corners of a rectangle: %f/%f %f/%f %f/%f , %f/%f\n", pad_x, pad_y, (pad_x + width), pad_y, (pad_x + width), (pad_y + length), pad_x,(pad_y + length));            
-            break;
-#endif
   	case PART_SHAPE_UNKNOWN:
 	default:
 
